--- a/Css.css
+++ b/Css.css
@@ -1,39 +1,39 @@
-html{
+html,
+body {
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
-}
-
-* , *::before , *::after{
-    box-sizing: inherit;
-}
-
-body{
-    margin:10px;
+    margin: 0px;
     text-align: center;
 }
 
-.wrapper{
-    float: left;
-    width:100%;
-    height:738px;
-    border-radius: 10px;
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
     background-color: #111845;
 }
 
-.background-img
-{
-  background-image: url(Images/Image.png);
-  height: 400px;
-  width: 800px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 5% auto;
-  padding:20px;
-  border: 1px solid #2a3cad;
-  border-radius: 4px;
-  box-shadow: 0px 0px 5px #2a3cad;
+.background-img {
+    width: 800px;
+    height: 400px;
+    padding-top: 20px;
+    margin: auto;
+    border: 1px solid #2a3cad;
+    border-radius: 4px;
+    box-shadow: 0px 0px 5px #2a3cad;
+    background-image: url(Images/Image.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.button{
+.button {
     width: 200px;
     border: none;
     padding: 15px;
@@ -45,16 +45,16 @@ body{
     outline: none;
 }
 
-.loadimg{
-    margin-top:10px; 
+.loadimg {
+    margin-top: 10px;
     display: none;
 }
 
-.doggos{
-    margin-top:10px;    
+.doggos {
+    margin-top: 10px;
 }
 
-.loading{
+.loading {
     width: 200px;
     height: 200px;
     border: none;
@@ -63,17 +63,25 @@ body{
     background: none;
 }
 
-img{
-    width:700px;
+img {
+    width: 700px;
     height: 500px;
     margin: 5px;
-    padding:5px;
+    padding: 5px;
     border: 5px solid cyan;
     animation: example 2s infinite;
 }
 
 @keyframes example {
-    0%   { border-color: rgba(0, 255, 255, 1); }
-    50%  { border-color: rgba(0, 255, 255, 0); }
-    100% { border-color: rgba(0, 255, 255, 1); }
+    0% {
+        border-color: rgba(0, 255, 255, 1);
+    }
+
+    50% {
+        border-color: rgba(0, 255, 255, 0);
+    }
+
+    100% {
+        border-color: rgba(0, 255, 255, 1);
+    }
 }
